--- a/ga_sandbox/vs2005/chap10ex1.vcproj
+++ b/ga_sandbox/vs2005/chap10ex1.vcproj
@@ -67,6 +67,7 @@
 				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
 				OutputFile="$(OutDir)/chap10ex1.exe"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="..\lib_win32"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/chap10ex1.pdb"
 				SubSystem="1"
