--- a/ga_sandbox/vs2005/chap14ex3.vcproj
+++ b/ga_sandbox/vs2005/chap14ex3.vcproj
@@ -67,6 +67,7 @@
 				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib cxcore.lib"
 				OutputFile="$(OutDir)/chap14ex3.exe"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="..\lib_win32"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/chap14ex3.pdb"
 				SubSystem="1"
@@ -225,6 +226,7 @@
 				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib cxcore.lib"
 				OutputFile="$(OutDir)/chap14ex3.exe"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="..\lib_win32"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
