--- a/ga_sandbox/vs2005/chap10ex3.vcproj
+++ b/ga_sandbox/vs2005/chap10ex3.vcproj
@@ -44,7 +44,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\;..\ext_include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NO_STATIC_CONSTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NO_STATIC_CONSTS;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -126,7 +126,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\;..\ext_include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NO_STATIC_CONSTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NO_STATIC_CONSTS;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -205,7 +205,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\;..\ext_include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NO_STATIC_CONSTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NO_STATIC_CONSTS;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -285,7 +285,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\;..\ext_include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NO_STATIC_CONSTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NO_STATIC_CONSTS;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
