--- a/ga_sandbox/_vs2005/chap1ex1.vcproj
+++ b/ga_sandbox/_vs2005/chap1ex1.vcproj
@@ -20,7 +20,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			InheritedPropertySheets=".\sandbox_defaults.vsprops;.\sandbox_debug_link.vsprops;.\sandbox_default_debug.vsprops"
+			InheritedPropertySheets=".\sandbox_defaults.vsprops;.\sandbox_default_debug.vsprops"
 			CharacterSet="1"
 			>
 			<Tool
@@ -117,7 +117,6 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
